knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Agreement_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_Date__c</fullName>
    <label>Agreement Sent Date</label>
    <type>Date</type>
</CustomField>