knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <description>Applicant type is either new or incumbent</description>
    <inlineHelpText>New or Incumbent Applicant</inlineHelpText>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>