knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Approval_to_Move_Forward_with_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Approval_to_Move_Forward_with_Interviews__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document who approved the candidate to move forward to the interviewing stage.</description>
    <inlineHelpText>Document who approved the candidate to move forward to the interviewing stage.</inlineHelpText>
    <label>Approval to Move Forward with Interviews</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ATS Applicants (Approval to Move Forward with Interviews)</relationshipLabel>
    <relationshipName>ATS_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>