knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Approved_To_Interview__c.field-meta.xml
<CustomField>
    <fullName>Approved_To_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved To Interview</label>
    <type>Checkbox</type>
</CustomField>