knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <label>Best Time to Contact</label>
    <length>250</length>
    <type>Text</type>
</CustomField>