knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Call_Logged_with_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Call_Logged_with_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You must log a call with the applicant before moving to the Awaiting Intake Form stage.</inlineHelpText>
    <label>Call Logged with Applicant</label>
    <type>Checkbox</type>
</CustomField>