knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Client_Division__c.field-meta.xml
<CustomField>
    <fullName>Client_Division__c</fullName>
    <formula>bpats__Job__r.bpats__Account__r.Client_Ops_Level_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Division</label>
    <type>Text</type>
</CustomField>