knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the relevant Contract so changes can be made on the ATS Applicant when the Contract changes</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ATS Applicants</relationshipLabel>
    <relationshipName>ATS_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>