knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Credentialling_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Credentialling_Additional_Details__c</fullName>
    <label>Credentialing Additional Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>