knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/DEA_Licenses__c.field-meta.xml
<CustomField>
    <fullName>DEA_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEA Licenses</label>
    <type>Checkbox</type>
</CustomField>