knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Declined__c.field-meta.xml
<CustomField>
    <fullName>Declined__c</fullName>
    <description>Indicates if a candidate has been declined</description>
    <inlineHelpText>Indicates if a candidate has been declined</inlineHelpText>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCP Declined</fullName>
            </value>
            <value>
                <fullName>Candidate Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>