knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Declined_Detail__c.field-meta.xml
<CustomField>
    <fullName>Declined_Detail__c</fullName>
    <description>Indicates the reason a candidate has been declined</description>
    <inlineHelpText>select a reason the candidate has been declined</inlineHelpText>
    <label>Declined Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Declined__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot Sponsor Visa</fullName>
            </value>
            <value>
                <fullName>Clinical Experience</fullName>
            </value>
            <value>
                <fullName>Credentials</fullName>
            </value>
            <value>
                <fullName>Do not hire</fullName>
            </value>
            <value>
                <fullName>Location Terminated</fullName>
            </value>
            <value>
                <fullName>No position available</fullName>
            </value>
            <value>
                <fullName>Qualifications</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Accepted Another Position</fullName>
            </value>
            <value>
                <fullName>Benefits Package Not Competitive</fullName>
            </value>
            <value>
                <fullName>Clinical Scope Not Aligned with My Skills or Interests</fullName>
            </value>
            <value>
                <fullName>Compensation Package Not Competitive</fullName>
            </value>
            <value>
                <fullName>Concerns about Practice Culture, Stability, or Reputation</fullName>
            </value>
            <value>
                <fullName>Contract Terms (Non-Financial) Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Credentialing Process Too Burdensome</fullName>
            </value>
            <value>
                <fullName>Decided to Stay at Current Position</fullName>
            </value>
            <value>
                <fullName>Licensing or Visa Complications</fullName>
            </value>
            <value>
                <fullName>Location Not Desirable</fullName>
            </value>
            <value>
                <fullName>Negative Interview Experience</fullName>
            </value>
            <value>
                <fullName>No Longer Seeking a New Opportunity</fullName>
            </value>
            <value>
                <fullName>Organization’s Values Not Aligned with Mine</fullName>
            </value>
            <value>
                <fullName>Personal Circumstances Have Changed</fullName>
            </value>
            <value>
                <fullName>Poor Communication During Recruitment</fullName>
            </value>
            <value>
                <fullName>Practice Model Not a Good Fit</fullName>
            </value>
            <value>
                <fullName>Prefer Not to Disclose</fullName>
            </value>
            <value>
                <fullName>Process Taking Too Long</fullName>
            </value>
            <value>
                <fullName>Scheduling Expectations Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>144 hour commitment</fullName>
                <isActive>false</isActive>
                <label>144 hour commitment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>