knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Documentation_Executed__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The final contract with the candidate is fully executed by all parties</description>
    <inlineHelpText>The final contract with the candidate is fully executed by all parties</inlineHelpText>
    <label>Documentation Executed</label>
    <type>Checkbox</type>
</CustomField>