knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/EHR_System_Proficiencies__c.field-meta.xml
<CustomField>
    <fullName>EHR_System_Proficiencies__c</fullName>
    <inlineHelpText>Electronic Health Record System Proficiencies</inlineHelpText>
    <label>EHR System Proficiencies</label>
    <length>250</length>
    <type>Text</type>
</CustomField>