knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Global_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Facility_ID__c</fullName>
    <formula>bpats__Job__r.bpats__Account__r.Global_Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Facility ID</label>
    <type>Text</type>
</CustomField>