knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Global_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Provider_ID__c</fullName>
    <formula>bpats__ATS_Applicant__r.Global_Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Provider ID</label>
    <type>Text</type>
</CustomField>