knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/IMLC_License__c.field-meta.xml
<CustomField>
    <fullName>IMLC_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMLC License</label>
    <type>Checkbox</type>
</CustomField>