knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Interview_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Approval_Date__c</fullName>
    <label>Interview Approval Date</label>
    <type>Date</type>
</CustomField>