knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Interview_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Interview_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATS_Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>