knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>Job Name Used for Email Templates</description>
    <formula>bpats__Job__r.Name</formula>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>