knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/MD_DO_agrees_to_superv_physician_role__c.field-meta.xml
<CustomField>
    <fullName>MD_DO_agrees_to_superv_physician_role__c</fullName>
    <inlineHelpText>If the clinician is an MD/DO and the facility has NP/PA coverage, has the clinician been informed of their primary or alternate supervisory physician role for nurse practitioners and physician assistants, and do they agree to work in this capacity?</inlineHelpText>
    <label>MD/DO agrees to superv. physician role?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>