knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/NRP_certification__c.field-meta.xml
<CustomField>
    <fullName>NRP_certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRP certification</label>
    <type>Checkbox</type>
</CustomField>