knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Personal_Interests_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interests_Hobbies__c</fullName>
    <label>Personal Interests/Hobbies</label>
    <length>250</length>
    <type>Text</type>
</CustomField>