knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Potential_credentialling_delay__c.field-meta.xml
<CustomField>
    <fullName>Potential_credentialling_delay__c</fullName>
    <inlineHelpText>Is there anything in the clinician’s background that may cause a delay in credentialing?</inlineHelpText>
    <label>Potential credentialing delay?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>