knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Profile_Sent_to_Interview_Team__c.field-meta.xml
<CustomField>
    <fullName>Profile_Sent_to_Interview_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Sent to Interview Team</label>
    <type>Checkbox</type>
</CustomField>