knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Recruited_By2__c.field-meta.xml
<CustomField>
    <fullName>Recruited_By2__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;&amp; CreatedById , (CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruited By</label>
    <type>Text</type>
</CustomField>