knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Recruiter_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Calendly_Link__c</fullName>
    <description>Calendly Link from the Job based on the Recruiter&apos;s account.</description>
    <formula>bpats__Job__r.Calendly_Link__c</formula>
    <label>Recruiter Calendly Link</label>
    <type>Text</type>
</CustomField>