knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Recruiter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Name__c</fullName>
    <formula>bpats__Job__r.Recruiter__r.FirstName+&apos; &apos;+bpats__Job__r.Recruiter__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruiter Name</label>
    <type>Text</type>
</CustomField>