knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Recruiter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Phone__c</fullName>
    <formula>bpats__Job__r.Recruiter__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruiter Phone</label>
    <type>Text</type>
</CustomField>