knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/References_Complete__c.field-meta.xml
<CustomField>
    <fullName>References_Complete__c</fullName>
    <description>An applicant must have references completed prior to being moved to Contracting stage</description>
    <inlineHelpText>Note: this status is visible to the clinician</inlineHelpText>
    <label>References Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>