knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Requested_Hours_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Requested_Hours_Per_Month__c</fullName>
    <label>Requested Hours Per Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>