knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Shift_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Shift_Preferences__c</fullName>
    <label>Shift Preferences</label>
    <length>250</length>
    <type>Text</type>
</CustomField>