knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/StageType__c.field-meta.xml
<CustomField>
    <fullName>StageType__c</fullName>
    <formula>TEXT(bpats__Stage__r.bpats__Stage_Type__c)</formula>
    <label>StageType</label>
    <type>Text</type>
</CustomField>