knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Term_Sheet_Approved__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checked box means it is approved</description>
    <inlineHelpText>A checked box means it is approved</inlineHelpText>
    <label>Term Sheet Approved</label>
    <type>Checkbox</type>
</CustomField>