knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Term_Sheet_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Sheet Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATS_Applicants3</relationshipName>
    <type>Lookup</type>
</CustomField>