knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Ties_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Ties_to_Location__c</fullName>
    <label>Ties to Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>