knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Verbal_Offer_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Offer_Approval_Date__c</fullName>
    <label>Verbal Offer Approval Date</label>
    <type>Date</type>
</CustomField>