knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Verbal_Offer_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Offer_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verbal Offer Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATS_Applicants2</relationshipName>
    <type>Lookup</type>
</CustomField>