knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Willing_to_do_ventilator_management__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_do_ventilator_management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required for HM</inlineHelpText>
    <label>Willing to do ventilator management?</label>
    <type>Checkbox</type>
</CustomField>