knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Years_of_Experience_in_Desired_Role__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience_in_Desired_Role__c</fullName>
    <label>Years of Experience in Desired Role</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>