knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Years_of_Leadership_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Leadership_Experience__c</fullName>
    <label>Years of Leadership Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>