knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Approval_to_Interview.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_to_Interview</fullName>
    <active>true</active>
    <description>In order to move to the Interviewing Stage, Approve to Interview  and Interview Approved By must be filled in.</description>
    <errorConditionFormula>AND (bpats__Stage__r.bpats__Sequence__c = 5,
  
OR (Approved_To_Interview__c  &lt;&gt; TRUE,

ISBLANK( Interview_Approved_By__c )))</errorConditionFormula>
    <errorMessage>In order to move to the Interviewing Stage, the Approve to Interview checkbox must be checked and the Interview Approved By field must be filled in on the applicant record.</errorMessage>
</ValidationRule>