knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Contracting_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Contracting_Stage</fullName>
    <active>true</active>
    <description>The Agreement Sent Date must be filled out on the Applicant record before moving to Contracting stage.</description>
    <errorConditionFormula>AND(
bpats__Stage__r.bpats__Sequence__c = 8,
ISBLANK (Agreement_Sent_Date__c ))</errorConditionFormula>
    <errorMessage>The Agreement Sent Date must be filled out on the Applicant record before moving to Contracting stage.</errorMessage>
</ValidationRule>