knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Declined_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Declined_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( bpats__Applicant_Status__c, &quot;Rejected&quot;),
ISBLANK (TEXT(Declined_Detail__c)))</errorConditionFormula>
    <errorDisplayField>Declined_Detail__c</errorDisplayField>
    <errorMessage>The Declined Reason and Declined Detail must be filled out on the Applicant record</errorMessage>
</ValidationRule>