knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Facility_Title_Before_Offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_Title_Before_Offer</fullName>
    <active>true</active>
    <description>Before an Applicant can enter the Offer stage, the Facility Title field on the Job record must be populated.</description>
    <errorConditionFormula>AND(
    bpats__Stage__r.bpats__Sequence__c = 6,
    ISBLANK( bpats__Job__r.Facility_Title_Lookup__c )
    )</errorConditionFormula>
    <errorMessage>Before moving to the Offer stage, the field Facility Title must be filled out on the Job record.</errorMessage>
</ValidationRule>