knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Log_a_call_before_next_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_a_call_before_next_stage</fullName>
    <active>true</active>
    <description>A call with the applicant must be logged before moving to the next stage.</description>
    <errorConditionFormula>AND 
(bpats__Stage__r.bpats__Sequence__c = 3, 
Call_Logged_with_Applicant__c  &lt;&gt; True )</errorConditionFormula>
    <errorMessage>You must log a call with the applicant before moving to the Awaiting Intake Form stage. Please check the checkbox on the applicant record after logging a call.</errorMessage>
</ValidationRule>