knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Placement_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Placement_Stage</fullName>
    <active>true</active>
    <description>The Documentation Executed checkbox must be filled out on the Applicant record before moving to Placement stage.</description>
    <errorConditionFormula>AND(
bpats__Stage__r.bpats__Sequence__c = 9,
Documentation_Executed__c &lt;&gt; TRUE )</errorConditionFormula>
    <errorMessage>The Documentation Executed checkbox must be filled out on the Applicant record before moving to Placement stage.</errorMessage>
</ValidationRule>