knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/References_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>References_Complete</fullName>
    <active>true</active>
    <description>An applicant must have references completed prior to being moved to Contracting stage</description>
    <errorConditionFormula>AND (bpats__Stage__r.Name = &quot;Contracting&quot;,  
References_Complete__c = False)</errorConditionFormula>
    <errorMessage>An applicant must have references completed prior to being moved to Contracting stage</errorMessage>
</ValidationRule>