knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Term_Sheet_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_Sheet_Approved</fullName>
    <active>true</active>
    <description>The Term Sheet Approved checkbox must be filled out on the Applicant record before moving to Term Sheet stage.</description>
    <errorConditionFormula>AND(
bpats__Stage__r.bpats__Sequence__c = 7,
(Term_Sheet_Approved__c  &lt;&gt; TRUE ))</errorConditionFormula>
    <errorMessage>The Term Sheet Approved checkbox must be filled out on the Applicant record before moving to Term Sheet stage.</errorMessage>
</ValidationRule>