knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__ATS_Applicant__c/validationRules/Verbal_Offer_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Verbal_Offer_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    bpats__Stage__r.bpats__Sequence__c = 6,
    OR(
        ISBLANK( Verbal_Offer_Approved_By__c ),
        ISBLANK( Verbal_Offer_Approval_Date__c ),
        ISBLANK( Requested_Start_Date__c )
    )
)</errorConditionFormula>
    <errorMessage>Before moving to the Offer stage, the fields Verbal Offer Approved By, Verbal Offer Approval Date, and Requested Start Date must be filled out on the Applicant record.</errorMessage>
</ValidationRule>